fix: hide overflow-x caused by yt-hoverSecondary

--- a/holodex.user.css
+++ b/holodex.user.css
@@ -4,7 +4,7 @@
 @namespace      https://github.com/Himither
 @homepageURL		https://github.com/Himither/Holodex-Hyperchat-Tweaks
 @supportURL			https://github.com/Himither/Holodex-Hyperchat-Tweaks/issues
-@version        1.1.13
+@version        1.1.14
 @updateURL	    https://raw.githubusercontent.com/Himither/Holodex-Hyperchat-Tweaks/master/holodex.user.css
 @description    Improved dark mode, adjustable chat width, hiding scrollbars/buttons and many more tweaks.
 @author         Himither
@@ -499,6 +499,10 @@
 
 
 	if yt-hoverSecondary {
+		
+		body {
+			overflow-x: hidden !important;
+		}
 		
 		#primary {
 			margin-left: 0 !important;
